[tool.poetry.scripts]
gfont = "gfont.gfontcli:main"

[tool.poetry]
name = "gfont"
version = "0.8.2"
description = "Browse and install fonts from fonts.google.com"
readme = "README.md"
license = "MIT"
authors = [
    "Phyo Wai Lin <phyowailin2004@proton.me>"
]
keywords = ["font", "ttf", "woff2", "woff2", "webfonts", "terminal"]
classifiers = [
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: System :: Console Fonts",
    "Topic :: Text Processing :: Fonts"
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
isort = "*"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
multi_line_output = 3
combine_as_imports = true
include_trailing_comma = true
force_grid_wrap = 3
ensure_newline_before_comments = true
