[tool.poetry.scripts]
gfont = "gfont.gfontcli:main"

[tool.poetry]
name = "gfont"
version = "0.9.8"
description = "Browse and install fonts from fonts.google.com"
readme = "README.md"
license = "MIT"
authors = [
    "Phyo Wai Lin <phyowailin2004@proton.me>"
]
keywords = ["font", "ttf", "woff2", "woff2", "webfonts", "terminal"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Console Fonts",
    "Topic :: Text Processing :: Fonts",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
combine_as_imports = true
include_trailing_comma = true
force_grid_wrap = 3
ensure_newline_before_comments = true
