[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gfont"
dynamic = ["version"]
description = 'Browse and install google fonts using terminal'
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["font", "ttf", "woff2", "terminal"]
authors = [{ name = "Phyo Wai Lin", email = "phyowailin2004@proton.me" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: System :: Console Fonts",
    "Topic :: Text Processing :: Fonts",
]
dependencies = ["requests"]

[project.urls]
Documentation = "https://github.com/nureon22/gfont#readme"
Issues = "https://github.com/nureon22/gfont/issues"
Source = "https://github.com/nureon22/gfont"

[project.scripts]
gfont = "gfont.gfontcli:main"

[tool.hatch.version]
path = "src/gfont/constants.py"

[tool.hatch.envs.dev]
dependencies = ["isort", "pre-commit"]

[tool.hatch.envs.dev.scripts]
setups = ["pre-commit install"]

[tool.coverage.run]
source_pkgs = ["gfont"]
branch = true
parallel = true
omit = ["src/gfont/constants.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
